--- a/css/stylesGen.css
+++ b/css/stylesGen.css
@@ -54,6 +54,42 @@ nav ul.nav-menu{
 
 }
 
+/*HOVER NAV */
+
+
+
+nav li{
+  display: inline;
+  margin: 0 0 0 15px ;
+  padding: 10px 20px;
+  background-color: orange;
+  border-radius: 5px;
+  transition: 1s all;
+  cursor: pointer;    
+}
+
+nav a{
+  text-transform: uppercase;
+  color: #000;
+  font-weight: bold;
+  font-size: 18px ;
+  text-decoration: none;
+
+}
+
+nav a:hover{
+  color: #fff;
+  text-decoration: underline;
+
+}
+
+nav li:hover{
+  background: rgb(255, 218, 7);
+  transform: scale(1.1);
+}
+
+
+
 /* VIDEO BACK*/
 
 .container-uno{
@@ -80,7 +116,7 @@ nav ul.nav-menu{
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 99vh;
   overflow: hidden;
   
 }
@@ -89,7 +125,7 @@ nav ul.nav-menu{
 .container-uno video{
   min-width: 100%;
   min-height: 100%;
-  border: 2px solid green ;
+  
 }
 
 .overlay{
@@ -98,9 +134,10 @@ nav ul.nav-menu{
   position: absolute;
   top: 0;
   left: 0;
-  background: #303952;
+  /* background: #303952;*/
+  background: #000;
   z-index: 1;
-  opacity: .60;
+  opacity: .30;
 }
 
 .container-flex{
