--- a/css/stylesGen.css
+++ b/css/stylesGen.css
@@ -2,8 +2,11 @@ body{
      font-size: 1rem;
      line-height: 1.5;
      overflow-x: hidden; 
+     
      /*OVERFLOW X - PARA OCULTAR LA BARRA ESPACIADORA - ABAJO*/  
 }
+
+
 
 header{
   border: 1px solid black;
@@ -98,6 +101,7 @@ nav li:hover{
 
 
 
+
 /* VIDEO BACK*/
 
 .container-uno{
@@ -110,11 +114,11 @@ nav li:hover{
 }
 
 .content{
-  max-width: 70rem;
+  max-width: 60rem;
   padding-left:1rem;
   padding-right:1rem;
   border: 3px solid orange;
-  margin: auto;
+  margin: 0 auto;
   text-align: left;
   
 }
@@ -124,7 +128,7 @@ nav li:hover{
   top: 0;
   left: 0;
   width: 100%;
-  height: 99vh;
+  height: 100vh;
   overflow: hidden;
   
 }
@@ -222,29 +226,25 @@ nav li:hover{
 
 
 /* GALERIA DE IMAGENES*/
-.galeria{
-  position:static;
-  display: block;
-  border: 1px solid red;
-  padding: 20% 1px;
-  margin: 0 2% 0 2%;
-  background-color: #6d6b6b;
-  align-items:center;
-}
+
+
+
+
 
 .granformato{
-  width: 95.6%;
+  width: 99%;
   height: 30%;
   position: absolute;
-  border: 1px solid green;
+  border: 2px solid green;
 }
+
 
 
 .container-dos{
   display: flex;
   background-color: #929292;
   margin: 0 2% 0 2%;
-  padding: 5% 1px;
+  padding: 3% 2%;
   border: 1px solid blue;
   align-items:center;
 
