--- a/css/stylesGen.css
+++ b/css/stylesGen.css
@@ -303,7 +303,7 @@ animation:backwards  mimove 3s;
   display: flex;
   justify-content: center;
   position: static;
-  margin: 1% auto ;
+  margin: 1% 241px;
   padding: 10px auto;
   
 }
@@ -324,7 +324,7 @@ body .container-swim{
 .swiper {
     width: 60%;
     height: 100%;
-    margin: 200px auto 10px auto;
+    margin: 170px auto 10px auto;
     
   }
 
@@ -399,7 +399,7 @@ body .container-swim{
   
   display: flex;
   flex-wrap: wrap;  
-  margin: 0 auto;
+  
 }
 
 .mapa{
@@ -437,15 +437,14 @@ body .container-swim{
 
 ul .items {
   font-size: 120%;
-  padding: 15px 0 5px 10px;
-  /* font-weight: bold;*/
-  background-color: #ececec09 ;
-  border: none;
-  border-radius: 19px;
-  transition: 1s all;
-  cursor: pointer;
-  margin: 15px 40px;
-  
+    padding: 58px 0 5px 59px;
+    /* font-weight: bold; */
+    background-color: #ececec09;
+    border: none;
+    border-radius: 19px;
+    transition: 1s all;
+    cursor: pointer;
+    margin: 1px 0px;
 
 }
 
@@ -482,6 +481,8 @@ ul .items {
       
 }
 
+
+
 .items-par{
   font-size: 120%;
   padding: 15px 0 5px 10px;
@@ -514,15 +515,18 @@ ul .items {
   background: rgba(255, 255, 255, 0.062) ;
   display: flex;
   border-radius: 30px;
-  margin: 50px 162px;
+  margin: 10px 275px 51px 301px;
   
 }
 
 .contenido-opciones1{
   
   display: flex;
-  flex-wrap: wrap;  
-  margin: 0 auto;
+  flex-wrap: wrap; 
+  align-items: center;
+  justify-content: space-between;
+  
+  
 }
 
 
@@ -639,8 +643,8 @@ footer{
 
 @media screen and  (max-width:2200px){
   .swiper{
-    margin: 300px auto 0 0;
-    width: 80%;
+    margin: 200px auto 0 0;
+    width: 90%;
     
   }
  
@@ -659,8 +663,11 @@ footer{
 
 .nav .enlaces-header a{
   font-size: 18px;
+  align-items: center;
+  justify-content: center;
 
 }
+
 
 .enlaces-header{
   margin: 0 10%;
@@ -903,6 +910,7 @@ footer{
     margin-top: -728px
   }
 
+  
 
 }
 
@@ -937,10 +945,12 @@ header{
       /*border: 1px solid black;*/
       align-items: center;
       flex-direction: column;
+      margin: 0 auto;
       justify-content: space-evenly;
-      padding-top: 65px;
+      padding-top: 50px;
       /*COVER EN CIRCULO DEL MENU*/
-      clip-path: circle(0% at 87% 6%)
+      clip-path: circle(0% at 87% 6%);
+      
   }
   /*OTRA CLASE PARA DEFINIR APERTURA DEL MENU */
   .nav .menudos{
@@ -949,10 +959,10 @@ header{
   }
   
   .nav .menudos a{
-  width: 60%;
+  width: 50%;
   align-items: center;
-  padding: 0 90px;
   
+  padding: 0 44px;
   background: rgb(240,240,240);
   background: linear-gradient(0deg, rgba(240,240,240,1) 0%, rgba(229,229,229,1) 91%);
   
@@ -1074,6 +1084,30 @@ ul .items{
   margin-bottom: 40px;
 }
 
+}
 
+@media screen and  (max-width:400px){
+  .nav .menudos a{
+    width: 100px ;
+    margin: 0 auto;
+    align-items: center;
+    text-align: center;
+  }
+
+  .container3{
+    margin: 30px 20px;
+    padding: 2px 24px;
+  }
+
+  .twitter-timeline{
+    border: 5px solid purple;
+    margin: 0 auto;
+    width: 100%;
+  }
+
+  .twitter-container{
+    width: 100%;
+    margin: 0px auto;
+  }
 
 }
