--- a/css/stylesGen.css
+++ b/css/stylesGen.css
@@ -533,9 +533,11 @@ ul .items {
 }
 
 
-
+/*PROVISIONAL*/
 .infoImagen{
   padding-left:13% ;
+  padding-top: 20px;
+  padding-bottom: 50px;
 }
 
 
@@ -881,6 +883,14 @@ video{
 }
 
 
+.lateral-twitter .social-media > a{
+  margin:5px 0px ;
+  padding: 5px 2px 0px 30px ;
+  color: white;  
+  
+ 
+}
+
 
 
 
@@ -906,7 +916,7 @@ ul .items {
 .laterales-parrafo {
   padding: 0 auto;
   width: 100%;
-  padding: 81px 3px;
+  padding: 20px 3px;
   margin-right: 1%;
   
 }
@@ -919,7 +929,9 @@ ul .items {
 /* provisional*/
 
 .infoImagen{
-  padding-left:14% ;
+  padding-top: 30px;
+  padding-left: 14%;
+  
 }
 
 
@@ -1155,6 +1167,15 @@ video{
   padding: 10px 10px;
 }
 
+.lateral-twitter .social-media > a{
+  margin:5px -6px ;
+  padding: 5px 2px 0px 30px ;
+  color: white;  
+  
+ 
+}
+
+
 ul .items{
   margin: 15px 2px;
 }
@@ -1203,6 +1224,14 @@ ul .items{
   .twitter-container{
     width: 100%;
     margin: 0px auto;
+  }
+
+  .lateral-twitter .social-media > a{
+    margin:5px -10px ;
+    padding: 5px 2px 0px 30px ;
+    color: white;  
+    
+   
   }
 
 }
