--- a/css/stylesGen.css
+++ b/css/stylesGen.css
@@ -3,6 +3,9 @@
 }
 
 
+html{
+   scroll-behavior: smooth;
+}
 
 body{
      font-size: 1rem;
@@ -11,6 +14,7 @@ body{
      
      /*OVERFLOW X - PARA OCULTAR LA BARRA ESPACIADORA - ABAJO*/  
 }
+
 
 main{
    
